# bot7

./: CMakeLists.txt  README.md  automate.lua  bot7-scm-1.rockspec  hyperparam.lua  init.lua  utils.lua
benchmarks/: braninhoo.lua  camel_hump3.lua  camel_hump6.lua  hartmann3.lua  hartmann6.lua  init.lua  rastrigin.lua  rosenbrock.lua  styblinski_tang.lua
bots/: abstract.lua  bayesopt.lua  init.lua  metabot.lua  random_search.lua  trainer.lua
examples/: autoML.lua  dngo_demo.lua  run_benchmark.lua
examples/benchmarks/: ackley.lua  camel_hump3.lua  camel_hump6.lua  griewank.lua  hartmann6.lua  rastrigin.lua  rosenbrock.lua  schwefel.lua  sphere.lua  styblinski_tang.lua
examples/data/: iris.t7  iris_test30.t7
grids/: abstract.lua  init.lua  metagrid.lua  random.lua  sobol.lua
models/: abstract.lua  dngo.lua  init.lua  metamodel.lua
nnTools/: automator.lua  buffers.lua  builder.lua  evaluator.lua  init.lua  preprocessor.lua  timer.lua  trainer.lua
samplers/: abstract.lua  init.lua  metasampler.lua  slice.lua
scientists/: bayesopt.lua  init.lua  metascientist.lua  random_search.lua
scores/: abstract.lua  confidence_bound.lua  expected_improvement.lua  init.lua  metascore.lua
utils/: bits.lua  init.lua  math.lua  table.lua  tensor.lua  ui.lua
