CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)
IF(LUAROCKS_PREFIX)
  MESSAGE(STATUS "Installing bot7 via Luarocks")
  STRING(REGEX REPLACE "(.*)lib/luarocks/rocks.*" "\\1" CMAKE_INSTALL_PREFIX  "${LUAROCKS_PREFIX}")
  MESSAGE(STATUS "Prefix inferred from Luarocks: ${CMAKE_INSTALL_PREFIX}")
ENDIF()
FIND_PACKAGE(Torch REQUIRED)

FILE(GLOB luasrc *.lua)
SET(src "")
ADD_TORCH_PACKAGE(bot7 "${src}" "${luasrc}" "Bayesian Optimization for Torch7")

INSTALL(DIRECTORY models DESTINATION ${Torch_INSTALL_LUA_PATH_SUBDIR}/bot7)
INSTALL(DIRECTORY grids  DESTINATION ${Torch_INSTALL_LUA_PATH_SUBDIR}/bot7)
INSTALL(DIRECTORY scores DESTINATION ${Torch_INSTALL_LUA_PATH_SUBDIR}/bot7)
INSTALL(DIRECTORY samplers DESTINATION ${Torch_INSTALL_LUA_PATH_SUBDIR}/bot7)
INSTALL(DIRECTORY bots DESTINATION ${Torch_INSTALL_LUA_PATH_SUBDIR}/bot7)
INSTALL(DIRECTORY utils DESTINATION ${Torch_INSTALL_LUA_PATH_SUBDIR}/bot7)
INSTALL(DIRECTORY nnTools DESTINATION ${Torch_INSTALL_LUA_PATH_SUBDIR}/bot7)
INSTALL(DIRECTORY benchmarks DESTINATION ${Torch_INSTALL_LUA_PATH_SUBDIR}/bot7)